- MFH: Fixed bug #45191 (error_log ignores date.timezone php.ini val when   setting logging timestamps).